# pyEnsemblRest

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE.rst  Makefile  README.md  README.rst  TODO  TODO.md  examples.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/: CODEOWNERS
.github/workflows/: pull_request.yaml  push_tag.yaml
ensemblrest/: __init__.py  ensembl_config.py  ensemblrest.py  exceptions.py
pyensemblrest/: __init__.py  ensembl_config.py  ensemblrest.py  exceptions.py
pyensemblrest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: __init__.py  test_ensemblrest.py  test_exceptions.py  test_pyensemblrest.py
tests/: alltests.py  getalignmentbyspeciesregion.json  getancestorsbyid.json  getancestorschartbyid.json  getarchivebyid.json  getassemblyinfo.json  getassemblyinforegion.json  getdecendentsbyid.json  getfeaturebyid.json  getfeaturebyregion.json  getgenetreebyid.nh  getgenetreebymemberid.xml  getgenetreebymembersymbol.xml  gethomologybyid.json  gethomologybysymbol.json  getinfocomparas.json  getinfodata.json  getinfoping.json  getinforest.json  getinfosoftware.json  getinfospecies.json  getlookupbyid.json  getmapassemblyonetotwo.json  getmapcdnatoregion.json  getmapcdstoregion.json  getmaptranslationtoregion.json  getontologybyid.json  getontologybyname.json  getsequencebyid.json  getsequencebyregion.json  gettaxonomybyid.json  gettaxonomyclassificationbyid.json  getvariantconsequencesbyid.json  getvariantconsequencesbyregion.json  getxrefsbyid.json  getxrefsbyname.json  getxrefsbysymbol.json  test_all.py  test_ensemblrest.py  test_exceptions.py
