[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "pyEnsemblRest"
version = "0.0.0"
description = "A Python Ensembl REST API client"
license = "GPL-3.0-or-later"
authors = [
  "Steve Moss <gawbul@gmail.com>",
  "Paolo Cozzi <paoloalessandro.cozzi@gmail.com>",
  "Danil Kozyatnikov <dan@danilink.com>",
  "David Cain <davidjosephcain@gmail.com>",
]
maintainers = [
  "Steve Moss <gawbul@gmail.com>",
]
readme = "README.md"
homepage = "https://github.com/gawbul/pyEnsemblRest"
repository = "https://github.com/gawbul/pyEnsemblRest"
documentation = "https://github.com/gawbul/pyEnsemblRest?tab=readme-ov-file"
keywords = ["ensembl", "python", "rest", "api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
packages = [
  { include = "pyensemblrest" }
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
coveralls = "^4.0.1"
requests = "^2.32.3"
mypy = "^1.13.0"
ruff = "^0.7.4"
pre-commit = "^4.0.1"
types-requests = "^2.32.0.20241016"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
markers = [
    "live: tests that run live in CI (deselect with '-m \"not live\"')"
]

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
scripts_are_modules = true
exclude = ["tests/.", "examples.py"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
